--- a/domoticz.cfg
+++ b/domoticz.cfg
@@ -33,5 +33,7 @@ MOWER_BATTERY_IDX=2
 #BATTERY IDX DOMOTICZ - Percent
 MOWER_RFLINK_IDX=3
 #CONNECTIVITY IDX DOMOTICZ - Percent
+CLIENT_LANGUAGE=german
+#Set Language for Status Information. Available Languages see Github. (for now only german and english is available)
 
 # END
